<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="?android:buttonBarButtonStyle"
    tools:context="com.scopely.particulate.example.MainActivity">

    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/point_emitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point_emitter"/>
    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/path_emitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_emitter"/>
    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/bound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bound_view"/>
    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_center"/>
    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/gravity_well"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravity_well"/>
    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/touch_point_emitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_point"/>
    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/snow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snow"/>
</LinearLayout>
